# mylog

./: .env.example  .gitignore  docker-compose.yml  implement.md  main.py  plan.md  planDetails.md  pyproject.toml
backend/: database.py  init_db.py  main.py  security.py
backend/models/: asset.py  life_note.py  page.py  page_version.py  user.py  work.py
backend/routers/: admin_life_notes.py  admin_pages.py  admin_works.py  auth.py  health.py  life_notes.py  pages.py  upload.py  works.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/assets/home/: album.jpg:Zone.Identifier  peace.jpg:Zone.Identifier  round glasses.jpg:Zone.Identifier
frontend/src/components/: RichEditor.vue  RichEditorToolbar.vue
frontend/src/router/: index.ts
frontend/src/views/: HomeView.vue  LifeNotesView.vue  LoginView.vue  WorksView.vue
