[project]
name = "mylog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.50.0",
]

[project.scripts]
mylog = "backend.main:app"
